[package]
name = "fasttunnel-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0.75"
bytes = "1.1.0"
static_init = "1.0.2"
yaml-rust = "0.4.5"