[package]
name = "fasttunnel-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.75"
bytes = "1.1.0"
lazy_static = "1.4.0"
anyhow = "1.0.52"
log = "0.4.14"
env_logger = "0.9.0"
toml = "0.5.8"
